z-index fixed to close button

--- a/src/components/CardList/Modal.scss
+++ b/src/components/CardList/Modal.scss
@@ -24,6 +24,7 @@
 
       .ant-modal-close-x {
         width: 70px;
+        z-index: 800;
         height: 70px;
         display: flex;
         align-items: center;
